Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finance & Data Portfolio | Your Name</title>
+  <title>Finance & Data Portfolio | Paul McCoy</title>
 
   <!-- Simple, clean styling -->
   <style>
@@ -883,11 +883,11 @@
             <div class="contact-links">
               <!-- Replace with your real email & LinkedIn -->
               <a class="pill-link" href="mailto:you@example.com">
-                Email: you@example.com
+                Email: paulmccoy890@gmail.com.com
               </a>
               <a
                 class="pill-link"
-                href="https://www.linkedin.com/in/your-linkedin/"
+                href="https://www.linkedin.com/in/paulmcc0y/"
                 target="_blank"
                 rel="noreferrer"
               >
@@ -899,7 +899,7 @@
 
         <!-- FOOTER -->
         <footer>
-          © <span id="year"></span> Your Name. Built with HTML/CSS and hosted
+          © <span id="year"></span> Paul McCoy. Built with HTML/CSS and hosted
           on GitHub Pages.
         </footer>
       </div>
