Update name and GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             </div>
 
             <h1 class="hero-title">
-              <span class="hero-highlight">Your Name</span><br />
+              <span class="hero-highlight">Paul McCoy</span><br />
               Building data-driven stories in markets.
             </h1>
 
@@ -578,7 +578,7 @@
               <!-- Replace with your real GitHub profile URL -->
               <a
                 class="btn-secondary"
-                href="https://github.com/YOUR-GITHUB-USERNAME"
+                href="https://github.com/paulmccoy03"
                 target="_blank"
                 rel="noreferrer"
               >
