Update download link for Excel file

--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
                 <li>Outputs include intrinsic value range and scenario charts.</li>
               </ul>
               <div class="card-links">
-                <!-- Replace with your file or OneDrive / Google Drive link -->
-                <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  Download Excel
-                </a>
+                <a class="pill-link" href="Kraft_FSA.xlsx" download>
+  Download Excel: Kraft FSA
+</a>
+
               </div>
             </article>
 
