Fix download link text for Kraft FSA

--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="Kraft_FSA.xlsx" download>
-  Download Excel: Kraft FSA
-</a>
+                  Download Excel: Kraft_FSA
+                </a>
 
               </div>
             </article>
