Fix download link text for Kraft FSA

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="Kraft_FSA.xlsx" download>
-                  Download Excel: Kraft_FSA
+                  Download Excel: Kraft FSA
                 </a>
 
               </div>
