Update download link for Kraft FSA Excel file

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 <li>Outputs include intrinsic value range and scenario charts.</li>
               </ul>
               <div class="card-links">
-                <a class="pill-link" href="Kraft_FSA.xlsx" download>
+                <a class="pill-link" href="https://paulmccoy03.github.io/Kraft_FSA.xlsx" download>
                   Download Excel: Kraft FSA
                 </a>
 
