--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finance & Data Portfolio | Paul McCoy</title>
+  <title>Paul McCoy | Finance & Data Portfolio</title>
 
-  <!-- Simple, clean styling -->
   <style>
     :root {
       --bg: #0f172a;
       --bg-elevated: #111827;
       --accent: #38bdf8;
-      --accent-soft: rgba(56, 189, 248, 0.08);
       --text-main: #e5e7eb;
       --text-muted: #9ca3af;
       --border-subtle: #1f2937;
@@ -44,7 +42,6 @@
       display: block;
     }
 
-    /* Layout */
     .page {
       min-height: 100vh;
       display: flex;
@@ -137,7 +134,7 @@
       padding-bottom: 3rem;
     }
 
-    /* Hero section */
+    /* Hero */
     .hero {
       display: grid;
       grid-template-columns: minmax(0, 1.7fr) minmax(0, 1.3fr);
@@ -299,7 +296,7 @@
       font-size: 0.9rem;
     }
 
-    /* Section base */
+    /* Sections */
     section {
       margin-top: 2.5rem;
     }
@@ -326,7 +323,6 @@
       max-width: 26rem;
     }
 
-    /* Cards / grids shared by all sections */
     .projects-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -530,17 +526,17 @@
 </head>
 <body>
   <div class="page">
-    <!-- Top navigation -->
+    <!-- NAVBAR -->
     <header>
       <nav class="nav">
         <div class="nav-left">
           <span class="nav-dot"></span>
-          <span>Finance & Data Portfolio</span>
+          <span>Paul McCoy | Finance & Data</span>
         </div>
         <div class="nav-links">
-          <a href="#excel-work">Excel Work</a>
+          <a href="#excel-work">Excel</a>
           <a href="#python-projects">Python</a>
-          <a href="#r-work">R Work</a>
+          <a href="#r-work">R</a>
           <a href="#stock-analysis">Stock Analysis</a>
           <a href="#contact">Contact</a>
         </div>
@@ -563,19 +559,17 @@
             </h1>
 
             <p class="hero-subtitle">
-              I’m a finance-focused analyst who works with
-              <strong>Python</strong>, <strong>R</strong>,
-              <strong>Tableau / Excel</strong> to build backtests, forecasting
-              models, and portfolio tools. This site organizes my work into
-              Excel, Python, R, and stock analysis.
+              I work across <strong>Excel</strong>, <strong>Python</strong>, and
+              <strong>R</strong> to build valuation models, backtests, and
+              stock analysis. This site is organized into four areas of my work:
+              Excel models, Python files, R work, and stock analysis.
             </p>
 
             <div class="hero-actions">
-              <!-- Replace the href with your actual resume / PDF -->
+              <!-- Replace with your resume if you want -->
               <a class="btn-primary" href="#" target="_blank" rel="noreferrer">
                 View Resume
               </a>
-              <!-- Replace with your real GitHub profile URL -->
               <a
                 class="btn-secondary"
                 href="https://github.com/paulmccoy03"
@@ -627,70 +621,75 @@
           <div class="section-header">
             <h2 class="section-title">Excel Work</h2>
             <p class="section-subtitle">
-              Selected Excel models, dashboards, and tools—often used for
-              valuation, portfolio tracking, and scenario analysis.
+              Excel-based financial statement analysis, valuation, and portfolio
+              modeling.
             </p>
           </div>
 
           <div class="projects-grid">
-            <!-- Example Excel project 1 -->
+            <!-- Kraft FSA card with real link -->
             <article class="card">
               <div class="card-badge-row">
                 <span class="card-badge">Excel</span>
-                <span class="card-tag">Valuation</span>
+                <span class="card-tag">Financial Statement Analysis</span>
               </div>
-              <h3 class="card-title">DCF & Relative Valuation Model</h3>
-              <p class="card-meta">Excel • VBA (optional)</p>
+              <h3 class="card-title">Kraft Financial Statement Analysis</h3>
+              <p class="card-meta">Workbook: Kraft_FSA.xlsx</p>
               <p class="card-text">
-                Integrated discounted cash flow and relative valuation template
-                with sensitivity tables and automated charts for price targets.
+                Detailed financial statement analysis of Kraft, including
+                common-size statements, ratio analysis, and interpretation
+                designed for academic and practical review.
               </p>
               <ul class="card-list">
-                <li>Inputs for revenue growth, margins, WACC, and multiples.</li>
-                <li>Sensitivity tables on WACC and terminal growth rate.</li>
-                <li>Outputs include intrinsic value range and scenario charts.</li>
+                <li>Pre-built ratio templates and common-size financials.</li>
+                <li>Sections for profitability, liquidity, leverage, and efficiency.</li>
+                <li>Organized layout suitable for classwork or professional review.</li>
               </ul>
               <div class="card-links">
-                <a class="pill-link" href="https://paulmccoy03.github.io/Kraft_FSA.xlsx" download>
+                <!-- Absolute URL directly to the file in the root of your site -->
+                <a
+                  class="pill-link"
+                  href="https://paulmccoy03.github.io/Kraft_FSA.xlsx"
+                >
                   Download Excel: Kraft FSA
                 </a>
-
               </div>
             </article>
 
-            <!-- Example Excel project 2 -->
+            <!-- Placeholder for a second Excel file if you want later -->
             <article class="card">
               <div class="card-badge-row">
                 <span class="card-badge">Excel</span>
-                <span class="card-tag">Portfolio</span>
+                <span class="card-tag">Valuation / Portfolio</span>
               </div>
-              <h3 class="card-title">Dividend & DRIP Tracker</h3>
-              <p class="card-meta">Excel • Power Query (optional)</p>
+              <h3 class="card-title">Additional Excel Model</h3>
+              <p class="card-meta">Template / Project</p>
               <p class="card-text">
-                Tracker for dividend income, DRIP reinvestment, and forward
-                yield, fed by brokerage CSV exports.
+                Placeholder for another Excel model (DCF, DRIP tracker, portfolio
+                dashboard, etc.). Replace this description and link when you add
+                more work.
               </p>
               <ul class="card-list">
-                <li>Automatic aggregation of dividend payments by ticker.</li>
-                <li>Forward income projections with DRIP on/off toggles.</li>
-                <li>Allocation and income charts driven by pivot tables.</li>
+                <li>Brief description of what the model does.</li>
+                <li>Key inputs and outputs you care about.</li>
+                <li>How you’d use it in practice.</li>
               </ul>
               <div class="card-links">
-                <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  Download Excel
+                <a class="pill-link" href="#">
+                  Download Excel (coming soon)
                 </a>
               </div>
             </article>
           </div>
         </section>
 
-        <!-- PYTHON FILES / PROJECTS -->
+        <!-- PYTHON FILES -->
         <section id="python-projects">
           <div class="section-header">
             <h2 class="section-title">Python Files</h2>
             <p class="section-subtitle">
-              Scripts and notebooks focused on backtesting, automation, and
-              analytics using pandas, NumPy, and related libraries.
+              Python scripts and notebooks for backtesting, automation, and
+              financial analytics.
             </p>
           </div>
 
@@ -700,20 +699,21 @@
                 <span class="card-badge">Python</span>
                 <span class="card-tag">Backtesting</span>
               </div>
-              <h3 class="card-title">EMA Crossover Backtest Engine</h3>
+              <h3 class="card-title">EMA Crossover Backtest</h3>
               <p class="card-meta">pandas • yfinance • matplotlib</p>
               <p class="card-text">
-                Backtesting engine for EMA crossover strategies on equities,
-                with performance reporting and visualizations.
+                Backtest engine that pulls historical prices from Yahoo Finance,
+                runs EMA crossover strategies, and compares performance to a
+                benchmark index.
               </p>
               <ul class="card-list">
-                <li>Downloads historical data from Yahoo Finance.</li>
-                <li>Simulates signals and trades with position sizing rules.</li>
-                <li>Outputs equity curve, drawdown, and summary statistics.</li>
+                <li>Configurable short/long EMAs and symbols.</li>
+                <li>Trade log, equity curve, and drawdown reporting.</li>
+                <li>Designed to run in Spyder or Jupyter.</li>
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  View on GitHub
+                  View Code (GitHub)
                 </a>
               </div>
             </article>
@@ -724,19 +724,19 @@
                 <span class="card-tag">Automation</span>
               </div>
               <h3 class="card-title">Portfolio Data Pipeline</h3>
-              <p class="card-meta">pandas • openpyxl • CSV</p>
+              <p class="card-meta">pandas • CSV • Excel</p>
               <p class="card-text">
-                Script that cleans brokerage exports, standardizes tickers, and
-                updates Excel / Tableau inputs automatically.
+                Script to clean brokerage exports, standardize tickers, and
+                generate clean tables for Excel models or Tableau dashboards.
               </p>
               <ul class="card-list">
-                <li>Handles multiple broker formats and duplicates.</li>
-                <li>Generates clean holdings and transactions tables.</li>
-                <li>Designed to run in Spyder or as a cron job.</li>
+                <li>Handles multiple file formats and duplicate rows.</li>
+                <li>Produces holdings, transactions, and dividends tables.</li>
+                <li>Easy to schedule or run interactively.</li>
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  View on GitHub
+                  View Code (GitHub)
                 </a>
               </div>
             </article>
@@ -748,8 +748,8 @@
           <div class="section-header">
             <h2 class="section-title">R Work</h2>
             <p class="section-subtitle">
-              R scripts and RMarkdown notebooks focusing on time series,
-              forecasting, and econometrics for financial data.
+              Time series and econometrics work in R, including FX forecasting
+              and factor analysis.
             </p>
           </div>
 
@@ -759,20 +759,21 @@
                 <span class="card-badge">R</span>
                 <span class="card-tag">Time Series</span>
               </div>
-              <h3 class="card-title">VAR Model for FX Spot Rates</h3>
+              <h3 class="card-title">VAR FX Spot Rate Model</h3>
               <p class="card-meta">vars • tsDyn • tidyverse</p>
               <p class="card-text">
-                Vector autoregression on FX spot rates (e.g., USD/EUR, USD/CNY,
-                USD/MXN) with impulse response analysis under tariff shocks.
+                Vector autoregression model estimating the interaction of FX
+                pairs and simulating responses to macro shocks (e.g., tariff
+                changes).
               </p>
               <ul class="card-list">
-                <li>Preprocessing, stationarity tests, and lag selection.</li>
-                <li>Impulse response functions for policy / tariff scenarios.</li>
-                <li>RMarkdown report with charts and commentary.</li>
+                <li>Data cleaning, stationarity checks, and lag selection.</li>
+                <li>Impulse response and forecast error variance analysis.</li>
+                <li>RMarkdown report with interpretation and charts.</li>
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  View RMarkdown
+                  View RMarkdown / Repo
                 </a>
               </div>
             </article>
@@ -780,22 +781,22 @@
             <article class="card">
               <div class="card-badge-row">
                 <span class="card-badge">R</span>
-                <span class="card-tag">Econometrics</span>
+                <span class="card-tag">Risk / Factors</span>
               </div>
-              <h3 class="card-title">Factor & Risk Model Exploration</h3>
-              <p class="card-meta">tidyverse • broom • PerformanceAnalytics</p>
+              <h3 class="card-title">Factor Exposure & Risk Analysis</h3>
+              <p class="card-meta">tidyverse • PerformanceAnalytics</p>
               <p class="card-text">
-                R-based analysis of factor exposures (size, value, momentum) and
-                risk metrics on portfolio returns.
+                R-based analysis of portfolio returns against factor models
+                (size, value, momentum) and risk metrics.
               </p>
               <ul class="card-list">
-                <li>Regressions vs. factor benchmarks (e.g., Fama–French).</li>
-                <li>Rolling beta and volatility estimates.</li>
-                <li>Visualization of factor contributions to return.</li>
+                <li>Regressions vs. factor benchmarks.</li>
+                <li>Rolling volatility, beta, and drawdown estimates.</li>
+                <li>Visual factor contribution breakdown.</li>
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  View on GitHub
+                  View R Scripts
                 </a>
               </div>
             </article>
@@ -807,8 +808,8 @@
           <div class="section-header">
             <h2 class="section-title">Stock Analysis</h2>
             <p class="section-subtitle">
-              Company and portfolio-level analysis, combining Excel models,
-              Python/R code, and written commentary.
+              Company-level and portfolio-level write-ups, tying together Excel,
+              Python, and R outputs.
             </p>
           </div>
 
@@ -816,25 +817,22 @@
             <article class="card">
               <div class="card-badge-row">
                 <span class="card-badge">Equity Research</span>
-                <span class="card-tag">Single Name</span>
+                <span class="card-tag">Single Stock</span>
               </div>
               <h3 class="card-title">Deep Dive: [Ticker] Investment Thesis</h3>
-              <p class="card-meta">Fundamental • Technical • Scenario Work</p>
+              <p class="card-meta">Fundamental • Valuation • Risk</p>
               <p class="card-text">
-                Full write-up on a single equity, including business overview,
-                valuation work, and risk / catalyst analysis.
+                Example of a full stock write-up including business model,
+                financials, valuation outputs, and key risks/catalysts.
               </p>
               <ul class="card-list">
-                <li>Links directly to supporting Excel model and code.</li>
-                <li>Base / bull / bear scenarios with target prices.</li>
-                <li>Summary one-pager for quick review.</li>
+                <li>Links to the supporting Excel and code.</li>
+                <li>Base / bull / bear scenarios.</li>
+                <li>Clear recommendation with rationale.</li>
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="#" target="_blank" rel="noreferrer">
                   PDF Write-Up
-                </a>
-                <a class="pill-link" href="#" target="_blank" rel="noreferrer">
-                  Supporting Files
                 </a>
               </div>
             </article>
@@ -844,16 +842,16 @@
                 <span class="card-badge">Portfolio</span>
                 <span class="card-tag">Multi-Asset</span>
               </div>
-              <h3 class="card-title">Portfolio Construction & Performance</h3>
-              <p class="card-meta">Excel • Python • Visualization</p>
+              <h3 class="card-title">Portfolio Performance & Allocation</h3>
+              <p class="card-meta">Excel • Python • Charts</p>
               <p class="card-text">
-                Ongoing analysis of personal or hypothetical portfolios, focused
-                on allocation, factor tilts, and drawdown behavior.
+                Overview of portfolio construction, performance vs. benchmarks,
+                and risk/return characteristics across time.
               </p>
               <ul class="card-list">
-                <li>Historical performance vs. benchmark indices.</li>
-                <li>Sector / factor exposure breakdowns.</li>
-                <li>Stress tests and scenario analysis summaries.</li>
+                <li>Allocation by sector, factor, and geography.</li>
+                <li>Historical performance vs. S&P 500 or custom benchmark.</li>
+                <li>Stress tests and drawdown analysis.</li>
               </ul>
               <div class="card-links">
                 <a class="pill-link" href="#" target="_blank" rel="noreferrer">
@@ -869,25 +867,25 @@
           <div class="section-header">
             <h2 class="section-title">Contact</h2>
             <p class="section-subtitle">
-              Open to opportunities in equity research, risk analytics, data
-              science for finance, and related roles.
+              Open to opportunities in equity research, risk analytics, and
+              data-driven finance roles.
             </p>
           </div>
 
           <div class="contact-card">
             <div>
               <strong>Let’s connect.</strong><br />
-              If you’d like to talk about projects, roles, or collaborations,
-              feel free to reach out.
+              Reach out if you’d like to talk about projects, roles, or
+              collaborations.
             </div>
             <div class="contact-links">
               <!-- Replace with your real email & LinkedIn -->
               <a class="pill-link" href="mailto:you@example.com">
-                Email: paulmccoy890@gmail.com.com
+                Email: you@example.com
               </a>
               <a
                 class="pill-link"
-                href="https://www.linkedin.com/in/paulmcc0y/"
+                href="https://www.linkedin.com/in/your-linkedin/"
                 target="_blank"
                 rel="noreferrer"
               >
@@ -907,7 +905,6 @@
   </div>
 
   <script>
-    // Auto-update year in footer
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
