Update Excel download link to raw GitHub URL

--- a/index.html
+++ b/index.html
@@ -647,12 +647,13 @@
               </ul>
               <div class="card-links">
                 <!-- Absolute URL directly to the file in the root of your site -->
-                <a
-                  class="pill-link"
-                  href="https://paulmccoy03.github.io/Kraft_FSA.xlsx"
-                >
-                  Download Excel: Kraft FSA
-                </a>
+               <a
+                 class="pill-link"
+                 href="https://raw.githubusercontent.com/paulmccoy03/paulmccoy03.github.io/main/Kraft_FSA.xlsx"
+                 >
+                 Download Excel: Kraft FSA
+               </a>
+
               </div>
             </article>
 
