Revise PDF documentation text and remove README
Updated the description of supporting documents and removed the README section.

--- a/index.html
+++ b/index.html
@@ -865,12 +865,12 @@
           <div class="section-header">
             <h2 class="section-title">PDF & Documentation</h2>
             <p class="section-subtitle">
-              Supporting documents and repository overview.
+              Supporting documents stored alongside the code and models.
             </p>
           </div>
 
           <div class="projects-grid">
-            <!-- SMIF_BLX.pdf -->
+            <!-- SMIF_BLX.pdf only -->
             <article class="card">
               <div class="card-badge-row">
                 <span class="card-badge">PDF</span>
@@ -879,8 +879,8 @@
               <h3 class="card-title">SMIF_BLX.pdf</h3>
               <p class="card-meta">File: SMIF_BLX.pdf</p>
               <p class="card-text">
-                PDF document stored alongside the code and models in this
-                repository. Open or download to review the contents directly.
+                PDF document stored in this repository. Open or download to
+                review the contents directly.
               </p>
               <div class="card-links">
                 <a
@@ -896,31 +896,6 @@
                   rel="noreferrer"
                 >
                   View on GitHub
-                </a>
-              </div>
-            </article>
-
-            <!-- README -->
-            <article class="card">
-              <div class="card-badge-row">
-                <span class="card-badge">Docs</span>
-                <span class="card-tag">Repository</span>
-              </div>
-              <h3 class="card-title">Repository README</h3>
-              <p class="card-meta">File: README.md</p>
-              <p class="card-text">
-                Markdown file describing this repository. Use it to provide
-                context, installation instructions, or notes on how the projects
-                relate to one another.
-              </p>
-              <div class="card-links">
-                <a
-                  class="pill-link"
-                  href="https://github.com/paulmccoy03/portfolio/blob/main/README.md"
-                  target="_blank"
-                  rel="noreferrer"
-                >
-                  View README
                 </a>
               </div>
             </article>
