--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
           <div class="section-header">
             <h2 class="section-title">Contact</h2>
             <p class="section-subtitle">
-              For questions about any of these projects or artifacts, feel free
+              For questions about any of these projects or related topics, feel free
               to reach out.
             </p>
           </div>
@@ -920,12 +920,12 @@
             </div>
             <div class="contact-links">
               <!-- Replace with your real email & LinkedIn -->
-              <a class="pill-link" href="mailto:you@example.com">
-                Email: you@example.com
+              <a class="pill-link" href="paulmccoy890@gmail.com">
+                Email: paulmccoy890@gmail.com
               </a>
               <a
                 class="pill-link"
-                href="https://www.linkedin.com/in/your-linkedin/"
+                href="https://www.linkedin.com/in/paulmcc0y/"
                 target="_blank"
                 rel="noreferrer"
               >
